# domain-shepherd

./: .env.local.example  AGENTS.md  LICENSE  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  tmp_mieter_schufa.html  tsconfig.json
.data/: domainshepherd.json
.github/: copilot-instructions.md
docs/requirements/: probe-requirements.md
scripts/: build-portable.mjs  git-meta.mjs  run-next-with-git-meta.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  probe.rs
src-tauri/src/probe/: constants.rs  dns.rs  http.rs  types.rs  util.rs  whois.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/probe/: route.ts
src/app/api/probe/whois/: route.ts
src/app/list/: ListPage.tsx
src/components/: AboutOverlay.tsx  ExternalLink.tsx  SettingsButton.tsx
src/lib/: app-config.ts  probe-runtime.ts  probe.ts
tests/: probe-parity.test.ts  probe-requirements.test.ts
