[package]
name = "domain-shepherd"
version = "0.1.0"
description = "Domain Shepherd desktop application"
authors = ["Dirk Heider"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "domain-shepherd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "net", "time"] }
regex = "1"
url = "2"
urlencoding = "2"
